[project]
name = "fluxons"
version = "0.1.0"
description = "Add your description here"
authors = [
    { name = "franalbani", email = "franalbani@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = []

[project.optional-dependencies]
gv = [
    "graphviz>=0.21",
]

[build-system]
requires = ["uv_build>=0.9.14,<0.10.0"]
build-backend = "uv_build"

[dependency-groups]
dev = [
    "ipython>=9.8.0",
]
